Remove the hack from #422 - no longer necessary, and it causes flickering in Safari when prefixed

--- a/assets/css/base.less
+++ b/assets/css/base.less
@@ -37,7 +37,6 @@ body.touch-support .non-touch-only {
 }
 
 #main-screen {
-  transform: translateY(0);
   position: absolute;
   left: 0;
   top: 0;
